# alpaka

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
example/: CMakeLists.txt
example/matrixMulAdd/: CMakeLists.txt
example/matrixMulAdd/src/: matrixMulAdd.cpp
example/parallelLoopPatterns/src/: parallelLoopPatterns.cpp
example/runtimeBlasGemm/: CMakeLists.txt
example/runtimeBlasGemm/src/: BLAS.hpp  BlasCpu.hpp  BlasCuda.hpp  blas.hpp  example_gemm.cpp  runtimeBlasGemm.cpp  sofieblas_runtime_virtual.hpp
include/alpaka/dev/: DevCpu.hpp  DevGenericSycl.hpp  DevUniformCudaHipRt.hpp
include/alpaka/kernel/: TaskKernelGpuUniformCudaHipRt.hpp
include/alpaka/mem/buf/: BufUniformCudaHipRt.hpp
script/: before_install.sh
script/job_generator/: generate_job_yaml.py  job_modifier.py  versions.py
script/readme_generator/: supported_compilers.json
